fix: 🐛 Prevent inset-squish-space calculation breaking build

--- a/docs/styles/docs.mixins.scss
+++ b/docs/styles/docs.mixins.scss
@@ -96,7 +96,7 @@ $spacing-ratio: 1.7;
 //
 // @param  {Number} inset-squish-space to set
 @mixin inset-squish-space($value) {
-  padding: round(calc($value / $spacing-ratio) - 1px) $value round(calc($value / $spacing-ratio));
+  padding: calc(round(calc($value / $spacing-ratio)) - 1px) $value calc(round(calc($value / $spacing-ratio)) - 1px);
 }
 
 // Create stack-space
